<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20sp"
    android:orientation="vertical"
    android:padding="28sp"
    tools:context=".EmailLoginActivity">


  <ImageButton
      android:id="@+id/btnBack"
      android:layout_width="48sp"
      android:layout_height="48sp"
      android:src="@drawable/ic_back_arrow"
      android:background="?attr/selectableItemBackgroundBorderless"
      android:contentDescription="@string/back" />

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="24sp"
      android:text="@string/sign_in_sign_up"
      android:textColor="#008080"
      android:textSize="27sp"
      android:textStyle="bold" />

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="32sp"
      android:text="@string/email_id"
      android:textColor="#008080"
      android:textSize="16sp"
      android:textStyle="bold" />

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="4sp"
      android:orientation="horizontal">


    <EditText
        android:id="@+id/Login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:textSize="20sp" />
  </LinearLayout>

  <View
      android:layout_width="match_parent"
      android:layout_height="1sp"
      android:layout_marginBottom="40sp"
      android:background="#DDDDDD" />

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="8sp"
      android:text="@string/password"
      android:textColor="#008080"
      android:textSize="16sp"
      android:textStyle="bold" />

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="4sp"
      android:orientation="horizontal">


    <EditText
        android:id="@+id/Login_password_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:textSize="20sp" />
  </LinearLayout>

  <View
      android:layout_width="match_parent"
      android:layout_height="1sp"
      android:layout_marginBottom="40sp"
      android:background="#DDDDDD" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32sp"
        android:background="@drawable/golden_button_background"
        android:padding="16sp"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="32sp"
      android:gravity="center"
      android:orientation="horizontal">

    <View
        android:layout_width="0sp"
        android:layout_height="1sp"
        android:layout_weight="1"
        android:background="#DEE2E6" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="16sp"
        android:paddingEnd="16sp"
        android:text="@string/or"
        android:textColor="#ADB5BD" />

    <View
        android:layout_width="0sp"
        android:layout_height="1sp"
        android:layout_weight="1"
        android:background="#DEE2E6" />
  </LinearLayout>

  <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/New_account"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="32sp"
      android:background="@drawable/golden_button_background"
      android:padding="16sp"
      android:text="@string/create_new_account"
      android:textColor="#FFFFFF"
      android:textStyle="bold" />


      <TextView
          android:id="@+id/forgot_password"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/forgot_password"
          android:textColor="#888888"
          android:textSize="16sp"
          android:textStyle="bold"
          android:layout_gravity="center"
          android:clickable="true"
          android:focusable="true"
          android:padding="4sp">

      </TextView>


</LinearLayout>



