<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15sp"
    android:orientation="vertical"
    android:padding="28sp"
    tools:context=".RegisterActivity">

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="48sp"
        android:layout_height="48sp"
        android:src="@drawable/ic_back_arrow"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/back" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8sp"
        android:layout_marginTop="32sp"
        android:text="@string/register_name"
        android:textColor="#008080"
        android:textSize="14sp"
        android:textStyle="bold" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4sp"
        android:orientation="horizontal">


        <EditText
            android:id="@+id/name_register_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:textSize="20sp" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1sp"
        android:layout_marginBottom="40sp"
        android:background="#DDDDDD" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8sp"

        android:text="@string/phone_number_register"
        android:textColor="#008080"
        android:textSize="14sp"
        android:textStyle="bold" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4sp"
        android:orientation="horizontal">


        <EditText
            android:id="@+id/phone_number_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:background="@null"
            android:textSize="20sp" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1sp"
        android:layout_marginBottom="40sp"
        android:background="#DDDDDD" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_id"
        android:layout_marginBottom="8sp"
        android:textColor="#008080"
        android:textSize="14sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4sp"
        android:orientation="horizontal">


        <EditText
            android:id="@+id/email_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:textSize="20sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1sp"
        android:layout_marginBottom="40sp"
        android:background="#DDDDDD" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8sp"
        android:text="@string/password"
        android:textColor="#008080"
        android:textSize="14sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4sp"
        android:orientation="horizontal">


        <EditText
            android:id="@+id/password_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:textSize="20sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1sp"
        android:layout_marginBottom="40sp"
        android:background="#DDDDDD" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/SignUp_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/golden_button_background"
        android:layout_marginBottom="32sp"
        android:padding="16sp"
        android:text="@string/register"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/progressbar_register"
        android:layout_gravity="center"
        android:layout_width="35sp"
        android:layout_height="35sp"
        android:visibility="gone">

    </ProgressBar>


</LinearLayout>



