<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/Background"
    android:layout_marginTop="50dp"
    tools:context=".OtpActivity">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:padding="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btnBack"
                android:layout_width="48sp"
                android:layout_height="48sp"
                android:src="@drawable/ic_back_arrow"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/back" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:textSize="32sp"
                android:textStyle="bold"
                android:textColor="#008080"
                android:layout_marginTop="24sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_or_sign_in_description"
                android:textSize="18sp"
                android:textColor="#666666"
                android:layout_marginTop="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enter_mobile_number"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="#008080"
                android:layout_marginTop="32sp" />

            <LinearLayout
                android:id="@+id/phoneNumber_otp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8sp">

                <TextView
                    android:id="@+id/text_mobile_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="0sp"
                    android:layout_height="0sp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/change_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/change"
                    android:textSize="16sp"
                    android:textColor="#E91E63" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/we_have_sent_6_digit_otp_to"
                android:textSize="16sp"
                android:textColor="#666666"
                android:layout_marginTop="32sp" />

            <!-- Responsive OTP Layout -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16sp">

                <EditText
                    android:id="@+id/otp_number_1"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@drawable/golden_border_box"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textAlignment="center"
                    android:imeOptions="actionNext"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:importantForAutofill="yes"
                    app:layout_constraintWidth_percent="0.13"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/otp_number_2"
                    app:layout_constraintHorizontal_chainStyle="spread" />

                <EditText
                    android:id="@+id/otp_number_2"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@drawable/golden_border_box"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="yes"
                    app:layout_constraintWidth_percent="0.13"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintStart_toEndOf="@+id/otp_number_1"
                    app:layout_constraintTop_toTopOf="@+id/otp_number_1"
                    app:layout_constraintEnd_toStartOf="@+id/otp_number_3" />

                <EditText
                    android:id="@+id/otp_number_3"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@drawable/golden_border_box"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="yes"
                    app:layout_constraintWidth_percent="0.13"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintStart_toEndOf="@+id/otp_number_2"
                    app:layout_constraintTop_toTopOf="@+id/otp_number_1"
                    app:layout_constraintEnd_toStartOf="@+id/otp_number_4" />

                <EditText
                    android:id="@+id/otp_number_4"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@drawable/golden_border_box"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="yes"
                    app:layout_constraintWidth_percent="0.13"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintStart_toEndOf="@+id/otp_number_3"
                    app:layout_constraintTop_toTopOf="@+id/otp_number_1"
                    app:layout_constraintEnd_toStartOf="@+id/otp_number_5" />

                <EditText
                    android:id="@+id/otp_number_5"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@drawable/golden_border_box"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="yes"
                    app:layout_constraintWidth_percent="0.13"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintStart_toEndOf="@+id/otp_number_4"
                    app:layout_constraintTop_toTopOf="@+id/otp_number_1"
                    app:layout_constraintEnd_toStartOf="@+id/otp_number_6" />

                <EditText
                    android:id="@+id/otp_number_6"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@drawable/golden_border_box"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="yes"
                    app:layout_constraintWidth_percent="0.13"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintStart_toEndOf="@+id/otp_number_5"
                    app:layout_constraintTop_toTopOf="@+id/otp_number_1"
                    app:layout_constraintEnd_toEndOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16sp">

                <TextView
                    android:id="@+id/waiting_otp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/waiting_for_otp_dynamic"
                    android:textSize="16sp"
                    android:textColor="#666666" />

                <View
                    android:layout_width="0sp"
                    android:layout_height="0sp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/resend_otp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/resend_otp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="#E91E63" />
            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnVerify"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/verify"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    android:background="@drawable/golden_button_background"
                    android:padding="16sp"
                    android:layout_marginTop="36sp" />

                <ProgressBar
                    android:id="@+id/progressbar_verify"
                    android:layout_gravity="center"
                    android:layout_width="35sp"
                    android:layout_height="35sp"
                    android:visibility="gone" />
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>